# fastapi-deferred-init

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yaml  renovate.json
.github/workflows/: benchmark.yml  python-publish.yml  test.yml
dev/bench/: data.js
src/fastapi_deferred_init/: __init__.py  lib.py  patch.py  routing.py
tests/: patched_app.py  test_apply_patch.py  test_lib.py
tests/data/: gen_code_ast.py
