[project]
name = "fastapi-deferred-init"
description = "Faster FastAPI start-up time for Projects with many nested routers"
keywords = ["fastapi", "speed", "router"]
authors = [{ name = "Jan Vollmer", email = "jan@vllmr.dev" }]
dependencies = ["fastapi>=0.136.1"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = ["Framework :: FastAPI"]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jvllmr/fastapi-deferred-init"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
ignore_package_warnings = ["pre-commit"]
plugins = ["sync-pre-commit-lock"]

[tool.pdm.scripts]
test = "pytest tests"
full_test = {shell= "pytest tests", env= {FULL_TEST = "true"}}
benchmark = {shell= "pytest tests --benchmark-json benchmark.json", env= {FULL_TEST = "true"}}
post_install = {composite = ["pre-commit install", "pdm install --plugins --frozen-lock", "pip install ./fastapi"]}


[tool.isort]
profile = "black"

[tool.pdm.version]
source = "scm"

[tool.pycln]
all = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "pre-commit>=4.3.0",
    "mypy>=1.20.2",
    "tuna>=0.5.13",
    "httpx>=0.28.1",
    "pytest-benchmark>=5.2.3",
    "pip>=26.1.1",
    "inline-snapshot>=0.32.7",
]
